--- a/css/page_layout.css
+++ b/css/page_layout.css
@@ -56,7 +56,13 @@ body {
 #mainwindow {
     grid-area: mainwindow;
     background-color: var(--background_colour);
-    padding: 0 100px 0 100px;
+    padding: 0 50px 0 50px;
+}
+#content {
+  margin: auto;
+  padding: 0 5px 0 5px;
+  max-width: 800px;
+  min-width: 350px;
 }
 
 #footer {
