--- a/css/font_styles.css
+++ b/css/font_styles.css
@@ -16,10 +16,28 @@ button {
   color: #f1f1f1;
 }
 
-p.question {
+p.question, a.bold {
   font-weight: bold;
 }
 
 td {
   border: 0.5px solid black;
+}
+
+h1 {
+  text-align: center;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+table {
+  margin: auto;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+
+td {
+  padding: 5px 8px;
 }
